# GPT-Excel-Translator

./: .gitignore  LICENSE  README.md  err.json  example.xlsx  main.py  pyproject.toml
